src/parser/antlr4_parser/SMT/SMT_Parser.java
// Generated from SMT_Parser.g4 by ANTLR 4.7.1

package parser.antlr4_parser.SMT;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SMT_Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DEFAUTO=1, INIT=2, FINAL=3, TRANS=4, TRUE=5, FALSE=6, INT=7, BOOL=8, EXISTS=9, 
		FORALL=10, NOT=11, AND=12, OR=13, DISTINCT=14, ASSERT=15, CHECKSAT=16, 
		GETMODEL=17, ID=18, STRING=19, INTEGER=20, LP=21, RP=22, PLUS=23, MINUS=24, 
		TIMES=25, SLASH=26, GT=27, LT=28, GEQ=29, LEQ=30, EQUALS=31, WS=32, COMMENT=33;
	public static final int
		RULE_run = 0, RULE_assertion = 1, RULE_check_sat = 2, RULE_get_model = 3, 
		RULE_automaton_def = 4, RULE_initial_def = 5, RULE_list_finals_def = 6, 
		RULE_list_transitions_def = 7, RULE_expression = 8, RULE_integer = 9, 
		RULE_list_finals = 10, RULE_list_transitions = 11, RULE_transition = 12, 
		RULE_state = 13, RULE_list_arguments = 14, RULE_argument = 15, RULE_type = 16, 
		RULE_input = 17;
	public static final String[] ruleNames = {
		"run", "assertion", "check_sat", "get_model", "automaton_def", "initial_def", 
		"list_finals_def", "list_transitions_def", "expression", "integer", "list_finals", 
		"list_transitions", "transition", "state", "list_arguments", "argument", 
		"type", "input"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'define-automaton'", "'init'", "'final'", "'trans'", "'true'", 
		"'false'", "'Int'", "'Bool'", "'exists'", "'forall'", "'not'", "'and'", 
		"'or'", "'distinct'", "'assert'", "'check-sat'", "'get-model'", null, 
		null, null, "'('", "')'", "'+'", "'-'", "'*'", "'/'", "'>'", "'<'", "'>='", 
		"'<='", "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "DEFAUTO", "INIT", "FINAL", "TRANS", "TRUE", "FALSE", "INT", "BOOL", 
		"EXISTS", "FORALL", "NOT", "AND", "OR", "DISTINCT", "ASSERT", "CHECKSAT", 
		"GETMODEL", "ID", "STRING", "INTEGER", "LP", "RP", "PLUS", "MINUS", "TIMES", 
		"SLASH", "GT", "LT", "GEQ", "LEQ", "EQUALS", "WS", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SMT_Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SMT_Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RunContext extends ParserRuleContext {
		public List<Automaton_defContext> automaton_def() {
			return getRuleContexts(Automaton_defContext.class);
		}
		public Automaton_defContext automaton_def(int i) {
			return getRuleContext(Automaton_defContext.class,i);
		}
		public List<AssertionContext> assertion() {
			return getRuleContexts(AssertionContext.class);
		}
		public AssertionContext assertion(int i) {
			return getRuleContext(AssertionContext.class,i);
		}
		public List<Check_satContext> check_sat() {
			return getRuleContexts(Check_satContext.class);
		}
		public Check_satContext check_sat(int i) {
			return getRuleContext(Check_satContext.class,i);
		}
		public List<Get_modelContext> get_model() {
			return getRuleContexts(Get_modelContext.class);
		}
		public Get_modelContext get_model(int i) {
			return getRuleContext(Get_modelContext.class,i);
		}
		public RunContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_run; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).enterRun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).exitRun(this);
		}
	}

	public final RunContext run() throws RecognitionException {
		RunContext _localctx = new RunContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_run);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LP) {
				{
				setState(40);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(36);
					automaton_def();
					}
					break;
				case 2:
					{
					setState(37);
					assertion();
					}
					break;
				case 3:
					{
					setState(38);
					check_sat();
					}
					break;
				case 4:
					{
					setState(39);
					get_model();
					}
					break;
				}
				}
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssertionContext extends ParserRuleContext {
		public TerminalNode LP() { return getToken(SMT_Parser.LP, 0); }
		public TerminalNode ASSERT() { return getToken(SMT_Parser.ASSERT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RP() { return getToken(SMT_Parser.RP, 0); }
		public AssertionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assertion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).enterAssertion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).exitAssertion(this);
		}
	}

	public final AssertionContext assertion() throws RecognitionException {
		AssertionContext _localctx = new AssertionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_assertion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(LP);
			setState(46);
			match(ASSERT);
			setState(47);
			expression();
			setState(48);
			match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Check_satContext extends ParserRuleContext {
		public TerminalNode LP() { return getToken(SMT_Parser.LP, 0); }
		public TerminalNode CHECKSAT() { return getToken(SMT_Parser.CHECKSAT, 0); }
		public TerminalNode RP() { return getToken(SMT_Parser.RP, 0); }
		public Check_satContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_check_sat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).enterCheck_sat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).exitCheck_sat(this);
		}
	}

	public final Check_satContext check_sat() throws RecognitionException {
		Check_satContext _localctx = new Check_satContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_check_sat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(LP);
			setState(51);
			match(CHECKSAT);
			setState(52);
			match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Get_modelContext extends ParserRuleContext {
		public TerminalNode LP() { return getToken(SMT_Parser.LP, 0); }
		public TerminalNode GETMODEL() { return getToken(SMT_Parser.GETMODEL, 0); }
		public TerminalNode RP() { return getToken(SMT_Parser.RP, 0); }
		public Get_modelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_get_model; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).enterGet_model(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).exitGet_model(this);
		}
	}

	public final Get_modelContext get_model() throws RecognitionException {
		Get_modelContext _localctx = new Get_modelContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_get_model);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(LP);
			setState(55);
			match(GETMODEL);
			setState(56);
			match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Automaton_defContext extends ParserRuleContext {
		public TerminalNode LP() { return getToken(SMT_Parser.LP, 0); }
		public TerminalNode DEFAUTO() { return getToken(SMT_Parser.DEFAUTO, 0); }
		public TerminalNode ID() { return getToken(SMT_Parser.ID, 0); }
		public TerminalNode RP() { return getToken(SMT_Parser.RP, 0); }
		public List<Initial_defContext> initial_def() {
			return getRuleContexts(Initial_defContext.class);
		}
		public Initial_defContext initial_def(int i) {
			return getRuleContext(Initial_defContext.class,i);
		}
		public List<List_finals_defContext> list_finals_def() {
			return getRuleContexts(List_finals_defContext.class);
		}
		public List_finals_defContext list_finals_def(int i) {
			return getRuleContext(List_finals_defContext.class,i);
		}
		public List<List_transitions_defContext> list_transitions_def() {
			return getRuleContexts(List_transitions_defContext.class);
		}
		public List_transitions_defContext list_transitions_def(int i) {
			return getRuleContext(List_transitions_defContext.class,i);
		}
		public Automaton_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_automaton_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).enterAutomaton_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).exitAutomaton_def(this);
		}
	}

	public final Automaton_defContext automaton_def() throws RecognitionException {
		Automaton_defContext _localctx = new Automaton_defContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_automaton_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(LP);
			setState(59);
			match(DEFAUTO);
			setState(60);
			match(ID);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LP) {
				{
				setState(64);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(61);
					initial_def();
					}
					break;
				case 2:
					{
					setState(62);
					list_finals_def();
					}
					break;
				case 3:
					{
					setState(63);
					list_transitions_def();
					}
					break;
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(69);
			match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Initial_defContext extends ParserRuleContext {
		public TerminalNode LP() { return getToken(SMT_Parser.LP, 0); }
		public TerminalNode INIT() { return getToken(SMT_Parser.INIT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RP() { return getToken(SMT_Parser.RP, 0); }
		public Initial_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initial_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).enterInitial_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).exitInitial_def(this);
		}
	}

	public final Initial_defContext initial_def() throws RecognitionException {
		Initial_defContext _localctx = new Initial_defContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_initial_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(LP);
			setState(72);
			match(INIT);
			setState(73);
			expression();
			setState(74);
			match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_finals_defContext extends ParserRuleContext {
		public List<TerminalNode> LP() { return getTokens(SMT_Parser.LP); }
		public TerminalNode LP(int i) {
			return getToken(SMT_Parser.LP, i);
		}
		public TerminalNode FINAL() { return getToken(SMT_Parser.FINAL, 0); }
		public List_finalsContext list_finals() {
			return getRuleContext(List_finalsContext.class,0);
		}
		public List<TerminalNode> RP() { return getTokens(SMT_Parser.RP); }
		public TerminalNode RP(int i) {
			return getToken(SMT_Parser.RP, i);
		}
		public List_finals_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_finals_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).enterList_finals_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).exitList_finals_def(this);
		}
	}

	public final List_finals_defContext list_finals_def() throws RecognitionException {
		List_finals_defContext _localctx = new List_finals_defContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_list_finals_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(LP);
			setState(77);
			match(FINAL);
			setState(78);
			match(LP);
			setState(79);
			list_finals();
			setState(80);
			match(RP);
			setState(81);
			match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_transitions_defContext extends ParserRuleContext {
		public List_transitionsContext list_transitions() {
			return getRuleContext(List_transitionsContext.class,0);
		}
		public List_transitions_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_transitions_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).enterList_transitions_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).exitList_transitions_def(this);
		}
	}

	public final List_transitions_defContext list_transitions_def() throws RecognitionException {
		List_transitions_defContext _localctx = new List_transitions_defContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_list_transitions_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			list_transitions();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode TRUE() { return getToken(SMT_Parser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(SMT_Parser.FALSE, 0); }
		public List<TerminalNode> LP() { return getTokens(SMT_Parser.LP); }
		public TerminalNode LP(int i) {
			return getToken(SMT_Parser.LP, i);
		}
		public TerminalNode NOT() { return getToken(SMT_Parser.NOT, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> RP() { return getTokens(SMT_Parser.RP); }
		public TerminalNode RP(int i) {
			return getToken(SMT_Parser.RP, i);
		}
		public TerminalNode DISTINCT() { return getToken(SMT_Parser.DISTINCT, 0); }
		public TerminalNode AND() { return getToken(SMT_Parser.AND, 0); }
		public TerminalNode OR() { return getToken(SMT_Parser.OR, 0); }
		public TerminalNode EXISTS() { return getToken(SMT_Parser.EXISTS, 0); }
		public List_argumentsContext list_arguments() {
			return getRuleContext(List_argumentsContext.class,0);
		}
		public TerminalNode FORALL() { return getToken(SMT_Parser.FORALL, 0); }
		public TerminalNode GT() { return getToken(SMT_Parser.GT, 0); }
		public List<IntegerContext> integer() {
			return getRuleContexts(IntegerContext.class);
		}
		public IntegerContext integer(int i) {
			return getRuleContext(IntegerContext.class,i);
		}
		public TerminalNode LT() { return getToken(SMT_Parser.LT, 0); }
		public TerminalNode GEQ() { return getToken(SMT_Parser.GEQ, 0); }
		public TerminalNode LEQ() { return getToken(SMT_Parser.LEQ, 0); }
		public TerminalNode EQUALS() { return getToken(SMT_Parser.EQUALS, 0); }
		public List<TerminalNode> ID() { return getTokens(SMT_Parser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SMT_Parser.ID, i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_expression);
		int _la;
		try {
			setState(173);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				match(TRUE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				match(FALSE);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				match(LP);
				setState(88);
				match(NOT);
				setState(89);
				expression();
				setState(90);
				match(RP);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(92);
				match(LP);
				setState(93);
				match(DISTINCT);
				setState(94);
				expression();
				setState(95);
				expression();
				setState(96);
				match(RP);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(98);
				match(LP);
				setState(99);
				match(AND);
				setState(100);
				expression();
				setState(102); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(101);
					expression();
					}
					}
					setState(104); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << ID) | (1L << LP))) != 0) );
				setState(106);
				match(RP);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(108);
				match(LP);
				setState(109);
				match(OR);
				setState(110);
				expression();
				setState(112); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(111);
					expression();
					}
					}
					setState(114); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << ID) | (1L << LP))) != 0) );
				setState(116);
				match(RP);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(118);
				match(LP);
				setState(119);
				match(EXISTS);
				setState(120);
				match(LP);
				setState(121);
				list_arguments();
				setState(122);
				match(RP);
				setState(123);
				expression();
				setState(124);
				match(RP);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(126);
				match(LP);
				setState(127);
				match(FORALL);
				setState(128);
				match(LP);
				setState(129);
				list_arguments();
				setState(130);
				match(RP);
				setState(131);
				expression();
				setState(132);
				match(RP);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(134);
				match(LP);
				setState(135);
				match(GT);
				setState(136);
				integer();
				setState(137);
				integer();
				setState(138);
				match(RP);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(140);
				match(LP);
				setState(141);
				match(LT);
				setState(142);
				integer();
				setState(143);
				integer();
				setState(144);
				match(RP);
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(146);
				match(LP);
				setState(147);
				match(GEQ);
				setState(148);
				integer();
				setState(149);
				integer();
				setState(150);
				match(RP);
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(152);
				match(LP);
				setState(153);
				match(LEQ);
				setState(154);
				integer();
				setState(155);
				integer();
				setState(156);
				match(RP);
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(158);
				match(LP);
				setState(159);
				match(EQUALS);
				setState(160);
				integer();
				setState(161);
				integer();
				setState(162);
				match(RP);
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(164);
				match(ID);
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(165);
				match(LP);
				setState(166);
				match(ID);
				setState(168); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(167);
					match(ID);
					}
					}
					setState(170); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==ID );
				setState(172);
				match(RP);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntegerContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(SMT_Parser.INTEGER, 0); }
		public TerminalNode LP() { return getToken(SMT_Parser.LP, 0); }
		public TerminalNode PLUS() { return getToken(SMT_Parser.PLUS, 0); }
		public List<IntegerContext> integer() {
			return getRuleContexts(IntegerContext.class);
		}
		public IntegerContext integer(int i) {
			return getRuleContext(IntegerContext.class,i);
		}
		public TerminalNode RP() { return getToken(SMT_Parser.RP, 0); }
		public TerminalNode MINUS() { return getToken(SMT_Parser.MINUS, 0); }
		public TerminalNode TIMES() { return getToken(SMT_Parser.TIMES, 0); }
		public TerminalNode SLASH() { return getToken(SMT_Parser.SLASH, 0); }
		public TerminalNode ID() { return getToken(SMT_Parser.ID, 0); }
		public IntegerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).enterInteger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).exitInteger(this);
		}
	}

	public final IntegerContext integer() throws RecognitionException {
		IntegerContext _localctx = new IntegerContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_integer);
		int _la;
		try {
			setState(209);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(175);
				match(INTEGER);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(176);
				match(LP);
				setState(177);
				match(PLUS);
				setState(178);
				integer();
				setState(180); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(179);
					integer();
					}
					}
					setState(182); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ID) | (1L << INTEGER) | (1L << LP))) != 0) );
				setState(184);
				match(RP);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(186);
				match(LP);
				setState(187);
				match(MINUS);
				setState(188);
				integer();
				setState(189);
				integer();
				setState(190);
				match(RP);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(192);
				match(LP);
				setState(193);
				match(TIMES);
				setState(194);
				integer();
				setState(196); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(195);
					integer();
					}
					}
					setState(198); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ID) | (1L << INTEGER) | (1L << LP))) != 0) );
				setState(200);
				match(RP);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(202);
				match(LP);
				setState(203);
				match(SLASH);
				setState(204);
				integer();
				setState(205);
				integer();
				setState(206);
				match(RP);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(208);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_finalsContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(SMT_Parser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SMT_Parser.ID, i);
		}
		public List_finalsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_finals; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).enterList_finals(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).exitList_finals(this);
		}
	}

	public final List_finalsContext list_finals() throws RecognitionException {
		List_finalsContext _localctx = new List_finalsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_list_finals);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(211);
			match(ID);
			setState(215);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(212);
				match(ID);
				}
				}
				setState(217);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_transitionsContext extends ParserRuleContext {
		public List<TransitionContext> transition() {
			return getRuleContexts(TransitionContext.class);
		}
		public TransitionContext transition(int i) {
			return getRuleContext(TransitionContext.class,i);
		}
		public List_transitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_transitions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).enterList_transitions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMT_ParserListener ) ((SMT_ParserListener)listener).exitList_transitions(this);
		}
	}
